# Atulya-Accounting-ERP

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
atulya_accounting_erp/: cli.py  core.py  utils.py
src/atulya_accounting_erp/: core.py
