[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atulya-accounting-erp"
dynamic = ["version"]
description = "Cross-platform Python CLI tool for accounting, inventory, billing, invoicing, and reporting for Indian businesses"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Atulya Tantra"}
]
dependencies = [
    "click>=8.0.0",
    "xlsxwriter>=3.0.0",
    "fpdf2>=2.5.0",
]

[project.scripts]
atulya-erp = "atulya_accounting_erp.cli:main"

[tool.setuptools.dynamic]
version = {attr = "atulya_accounting_erp.__version__"}

[tool.setuptools.packages.find]
include = ["atulya_accounting_erp*"]

